# eitri_video_stream

./: CMakeLists.txt  Dockerfile  README.md
dev/: ice_machine_states.cc  ice_machine_states.h  ice_state_machine.cc  state.h  video_capture.cc  video_capture.h  video_state_machine.cc  video_state_machine.h
include/video-stream/: ice_state_machine.h  video_streamer.h
src/: ice_machine_states.cc  ice_state_machine.cc  main.cpp  video_capture.cc  video_state_machine.cc  video_streamer.cc
